objects/Account_Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Questionnaires</relationshipLabel>
        <relationshipName>Account_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Mail__c</fullName>
        <label>Send Mail?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <label>Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hide</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Questionnaire</label>
    <nameField>
        <displayFormat>AQ-{0000}</displayFormat>
        <label>Account Questionnaire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>